<resources>
    <string name="app_name">BiblioTEK</string>
    <!-- Strings related to login -->
    <string name="textViewEmail">Email</string>
    <string name="textViewContrasenia">Contraseña</string>
    <string name="hintEtEmail">usuario@ejemplo.com</string>
    <string name="hintEtContrasenia">*****</string>
    <string name="btnLogin">Ingresar</string>
    <string name="checkBoxRecordarme">Recordarme</string>
    <string name="textViewRegistrarse"><u>¿No tienes una cuenta? Regístrate aquí</u></string>

    <!-- Strings related to Registrar -->
    <string name="confirmarContrasenia">Confirmar\nContraseña</string>
    <string name="btnRegistrar">Registrar</string>

    <!-- Strings related to Menu -->
    <string name="textViewConsultar">Consultar</string>
    <string name="textViewHistorial">Historial</string>
    <string name="textViewFavoritos">Favoritos</string>
    <string name="textViewInformacion">Información</string>
    <string name="btnSalir">Salir</string>

    <!-- Strings related to consultar -->
    <string name="hintEtCampo">Título , Autor o ISBN</string>
    <string name="spinnerCategoria">ISBN</string>

    <!-- Strings related to libro -->
    <string name="textViewTitulo">Título</string>
    <string name="textViewAutor">Autor</string>
    <string name="textViewIsbn">ISBN</string>
    <string name="textViewTituloEjemplo">El Nombre del Viento</string>
    <string name="textViewAutorEjemplo">Patrick Rothfuss</string>
    <string name="textViewIsbnEjemplo">9789588940670</string>
    <string name="textViewAcciones">Acciones</string>
    <string name="textViewLocaciones">Locaciones</string>

    <!-- Strings related to historial -->
    <string name="textViewFecha">Fecha</string>

    <!-- Strings related to locaciones -->
    <string name="textViewNombre">Nombre</string>
    <string name="textViewEdificio">Nº Edificio</string>
    <string name="textViewPiso">Piso</string>

    <string-array name="Categorias">
        <item>Autor</item>
        <item>ISBN</item>
        <item>Título</item>
    </string-array>

</resources>