<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewEdificioL"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewEdificio"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/textViewPisoL"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewNombreL"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNombreL"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewNombre"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/textViewEdificioL"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPisoL"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewPiso"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNombreL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEdificioL"
        app:layout_constraintTop_toTopOf="@+id/textViewNombreL"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>